--- a/nginx/http.d/vue.conf
+++ b/nginx/http.d/vue.conf
@@ -1,5 +1,5 @@
-upstream app_server {
-    server flask:5000;
+upstream vue_server {
+    server vue:8080;
 }
 
 server {
@@ -21,6 +21,6 @@ server {
         proxy_set_header Host $http_host;
         proxy_buffering off;
         proxy_redirect off;
-        proxy_pass http://app_server;
+        proxy_pass http://vue_server;
     }
 }
