Added bootstrap, removed console.logs

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -14,6 +14,7 @@ EXPOSE 8080
 
 RUN npm install --silent && \
     npm install -g @vue/cli@4.5.11 && \
-    npm install axios@0.21.1 --save
+    npm install axios@0.21.1 --save && \
+    npm install bootstrap@4.6.0 --save
 
 CMD ["npm","run","build"]
