Whitelisting frontend, denying everybody else

--- a/nginx/conf.d/flask.conf
+++ b/nginx/conf.d/flask.conf
@@ -10,6 +10,7 @@ server {
     client_max_body_size 64M;
 
     location / {
+        include /etc/nginx/conf.d/flask.whitelist;
         try_files $uri @proxy_to_app;
     }
 
