frontend: Added Vue to upload tournament data

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -16,6 +16,7 @@ RUN npm install --silent && \
     npm install bootstrap@4.6.0 --save && \
     npm install chart.js@2.9.4 --save && \
     npm install vue-chartjs@3.2.1 --save && \
+    npm install vue2-dropzone@3.6.0 --save && \
     npm run build
 
 # production stage
