--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-chartjs": "^3.2.1",
+    "vue-router": "^3.2.0",
+    "vue2-dropzone": "^3.6.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.11",
