--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.8.1",
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
