Running app implicitly from wsgi, register endpoint in proper order

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -49,4 +49,4 @@ USER www
 
 EXPOSE 5000
 
-CMD [ "gunicorn", "-w", "4", "--bind", "0.0.0.0:5000", "wsgi"]
+CMD [ "gunicorn", "-w", "4", "--bind", "0.0.0.0:5000", "wsgi:app"]
