Handled CORS Access-Control-Allow-Private-Network

--- a/docker-compose-prod.yaml
+++ b/docker-compose-prod.yaml
@@ -43,9 +43,7 @@ services:
   frontend:
     build:
       context: client
-      dockerfile: Dockerfile
-      args:
-        API_URL: http://10.0.1.100:5000/api/
+      dockerfile: Dockerfile.prod
     container_name: frontend
     restart: unless-stopped
     ports:
